--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,18 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-        android:name=".SplashScreenActivity"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+                android:name=".MenuNavActivity"
+                android:label="@string/title_activity_menu_nav"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+                android:name=".SplashScreenActivity"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN"/>
-            <category android:name="android.intent.category.LAUNCHER"/>
-        </intent-filter>
-
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity
                 android:name=".MainActivity"
