--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".zdataruangan">
+
+        <activity android:name=".zdataruangan"
+        >
         </activity>
+
         <activity
                 android:name=".MenuNavActivity"
                 android:label="@string/title_activity_menu_nav"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
         <activity
                 android:name=".SplashScreenActivity"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -29,6 +33,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
