Fragment to Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.itera.itime">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -24,6 +23,29 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
+        <activity android:name=".z8setting">
+        </activity>
+
+        <activity android:name=".z7share">
+        </activity>
+
+        <activity android:name=".z6rateus">
+        </activity>
+
+        <activity android:name=".z4datadosen">
+        </activity>
+
+        <activity android:name=".z3datamatakuliah">
+        </activity>
+
+        <activity android:name=".z2jadwal">
+        </activity>
+
+        <activity android:name=".z1catatan">
+        </activity>
+
+        <activity android:name=".z0lihatjadwal">
+        </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -51,8 +73,9 @@
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version"/>
 
-        <activity android:name=".zdataruangan">
+        <activity android:name=".z5dataruangan">
         </activity>
+
         <activity
                 android:name=".MenuNavActivity"
                 android:label="@string/title_activity_menu_nav"
@@ -68,7 +91,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
