--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,28 +22,22 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-
+        <activity android:name=".z5dataruangan">
+        </activity>
         <activity android:name=".z8setting">
         </activity>
-
         <activity android:name=".z7share">
         </activity>
-
         <activity android:name=".z6rateus">
         </activity>
-
         <activity android:name=".z4datadosen">
         </activity>
-
         <activity android:name=".z3datamatakuliah">
         </activity>
-
         <activity android:name=".z2jadwal">
         </activity>
-
         <activity android:name=".z1catatan">
         </activity>
-
         <activity android:name=".z0lihatjadwal">
         </activity>
         <!--
@@ -62,10 +56,8 @@
                 android:name=".maps.DirectionActivity"
                 android:label="@string/title_activity_direction">
         </activity>
-
         <activity android:name=".addtionalmenu.AboutActivity">
         </activity>
-
         <activity android:name=".addtionalmenu.SettingActivity">
         </activity>
 
@@ -73,15 +65,13 @@
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version"/>
 
-        <activity android:name=".z5dataruangan">
+        <activity android:name=".backupz5dataruangan">
         </activity>
-
         <activity
                 android:name=".MenuNavActivity"
                 android:label="@string/title_activity_menu_nav"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
-
         <activity
                 android:name=".SplashScreenActivity"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
