--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,19 +28,20 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha4'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.firebase:firebase-database:16.0.1'
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
+    testImplementation 'junit:junit:4.13-beta-2'
     implementation 'com.google.android.gms:play-services-basement'
     implementation 'com.google.firebase:firebase-core:16.0.8'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'com.google.android.gms:play-services-maps:11.8.0'
-    implementation 'com.google.maps.android:android-maps-utils:0.4+'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:okhttp:3.14.1'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 }
