--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha4'
-    implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     testImplementation 'junit:junit:4.13-beta-2'
     implementation 'com.google.android.gms:play-services-basement'
@@ -43,5 +42,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:okhttp:3.14.1'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
