--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".AddJadwalActivity">
+        </activity>
         <activity android:name=".Praktikum.FirebaseCRUD">
         </activity>
         <activity android:name=".z0lihatjadwal">
